--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,3 +1,14 @@
-.cite-nav__item {
+.cite-nav {
+  list-style-type: none;
+  padding-left: 0;
   background-color: @blue;
+}
+
+.cite-nav__item {
+  border-bottom: 1px solid @dark-blue;
+  border-top: 1px solid @light-blue;
+}
+
+.cite-nav__item a {
+  color: @white;
 }
