--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,4 @@
-@import "variables.less";
+@import "globals/variables.less";
 
-@import "page-header.less";
-@import "main-nav.less";
+@import "blocks/main-nav.less";
+@import "blocks/page-header.less";
