--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -7,8 +7,8 @@
 .cite-nav__item {
   border-bottom: 1px solid @dark-blue;
   border-top: 1px solid @light-blue;
-}
-
-.cite-nav__item a {
-  color: @white;
+  a {
+    color: @white;
+    text-decoration: none;
+  }
 }
