--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,7 @@
-@import "globals/variables.less";
+@import "globals/variables";
+@import "globals/fonts";
 
-@import "blocks/main-nav.less";
-@import "blocks/page-header.less";
+@import "blocks/body";
+@import "blocks/main-nav";
+@import "blocks/page-header";
+@import "blocks/reasons";
