index main styling

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -9,6 +9,8 @@
   border-top: 1px solid @light-blue;
   a {
     color: @white;
+    font-size: 18px;
+    font-weight: bold;
     text-decoration: none;
   }
 }
