--- a/source/less/globals/fonts.less
+++ b/source/less/globals/fonts.less
@@ -15,3 +15,6 @@
   src: url("../fonts/ptsansbold.woff2") format("woff2"),
     url("../fonts/ptsansbold.woff") format("woff");
 }
+
+@title-size: 18px;
+@regular-size: 14px;
