--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,4 +4,9 @@
 @import "blocks/body";
 @import "blocks/main-nav";
 @import "blocks/page-header";
+@import "blocks/contacts";
+
 @import "blocks/reasons";
+@import "blocks/hotel-request";
+
+@import "blocks/gallery";
