--- a/source/less/blocks/body.less
+++ b/source/less/blocks/body.less
@@ -4,3 +4,11 @@ body {
   color: @black;
   background-color: @white;
 }
+
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
