--- a/source/less/blocks/body.less
+++ b/source/less/blocks/body.less
@@ -2,6 +2,7 @@ body {
   font-family: "PT","Arial", sans-serif;
   text-transform: uppercase;
   color: @black;
+  line-height: 26px;
   background-color: @white;
 }
 
