--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -21,7 +21,7 @@
 }
 
 .reasons-list__item {
-  background-color: @light-grey;
+  background-color: @grey;
   &--bg-blue {
     background-color: @blue;
     color: @white;
@@ -29,4 +29,8 @@
   &--add-info {
     background-color: @white;
   }
+}
+
+.reasons-list__item--add-info {
+  padding-left: 70px;
 }
