--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -55,3 +55,10 @@
     text-transform: none;
   }
 }
+
+.feedback__button {
+    font-size: 21px;
+    color: @white;
+    background-color: @blue;
+    border: none;
+  }
