--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -1,8 +1,20 @@
+.feedback__form {
+  border-bottom: 1px solid @grey-border;
+  padding-top: 25px;
+  padding-left: 20px;
+}
+
 .introduce-form {
-  &__label,
+  &__label {
+    font-size: @title-size;
+    font-weight: bold;
+  }
   &__field {
     font-size: @title-size;
     font-weight: bold;
+    padding-left: 22px;
+    background-color: @grey-field;
+    border: none;
   }
   &__input-label {
     font-size: @regular-size;
@@ -10,10 +22,16 @@
 }
 
 .contacts-form {
-  &__label,
+  &__label {
+    font-size: @title-size;
+    font-weight: bold;
+  }
   &__field {
     font-size: @title-size;
     font-weight: bold;
+    padding-left: 22px;
+    background-color: @grey-field;
+    border: none;
   }
   &__input-label {
     font-size: @regular-size;
@@ -45,6 +63,7 @@
 }
 
 .comments-form {
+  border-bottom: none;
   &__input-label {
     font-size: @title-size;
     font-weight: bold;
@@ -53,6 +72,9 @@
     font-size: @title-size;
     font-weight: bold;
     text-transform: none;
+    padding-left: 22px;
+    background-color: @grey-field;
+    border: none;
   }
 }
 
