--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -1,86 +1,13 @@
-.feedback__form {
-  border-bottom: 1px solid @grey-border;
-  padding-top: 25px;
-  padding-left: 20px;
-}
-
-.introduce-form {
-  &__label {
-    font-size: @title-size;
-    font-weight: bold;
+.feedback {
+  &__form {
+    border-bottom: 1px solid @grey-border;
+    padding-top: 25px;
+    padding-left: 20px;
   }
-  &__field {
-    font-size: @title-size;
-    font-weight: bold;
-    padding-left: 22px;
-    background-color: @grey-field;
-    border: none;
-  }
-  &__input-label {
-    font-size: @regular-size;
-  }
-}
-
-.contacts-form {
-  &__label {
-    font-size: @title-size;
-    font-weight: bold;
-  }
-  &__field {
-    font-size: @title-size;
-    font-weight: bold;
-    padding-left: 22px;
-    background-color: @grey-field;
-    border: none;
-  }
-  &__input-label {
-    font-size: @regular-size;
-  }
-}
-
-.impression-form {
-  &__label {
-    font-size: @title-size;
-    font-weight: bold;
-  }
-  &__input-label {
-    font-size: @title-size;
-    text-transform: none;
-    font-weight: bold;
-  }
-}
-
-.sightseen-form {
-  &__label {
-    font-size: @title-size;
-    font-weight: bold;
-  }
-  &__input-label {
-    font-size: @title-size;
-    text-transform: none;
-    font-weight: bold;
-  }
-}
-
-.comments-form {
-  border-bottom: none;
-  &__input-label {
-    font-size: @title-size;
-    font-weight: bold;
-  }
-  &__field {
-    font-size: @title-size;
-    font-weight: bold;
-    text-transform: none;
-    padding-left: 22px;
-    background-color: @grey-field;
-    border: none;
-  }
-}
-
-.feedback__button {
+  &__button {
     font-size: 21px;
     color: @white;
     background-color: @blue;
     border: none;
   }
+}
