--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -8,40 +8,8 @@
   &__description {
     font-size: @regular-size;
   }
-}
-
-.gallery__list {
-  list-style-type: none;
-  padding-left: 0;
-}
-
-.pictures-list {
-  &__name {
-    font-size: @regular-size;
-    font-weight: bold;
-  }
-  &__author {
-    font-size: 12px;
-    text-transform: none;
-  }
-  &__item {
-    border-bottom: 1px solid @grey-border;
-    padding-top: 20px;
-  }
-  &__likes {
-    padding-left: 55px;
-    font-size: 14px;
-    line-height: 24px;
-    font-weight: bold;
-  }
-}
-
-.video-list {
-  &__title {
-    font-size: @title-size;
-    font-weight: bold;
-  }
-  &__description {
-    font-size: @regular-size;
+  &__list {
+    list-style-type: none;
+    padding-left: 0;
   }
 }
