font-sizes/line heights corrected

--- a/source/less/blocks/hotel-request.less
+++ b/source/less/blocks/hotel-request.less
@@ -1,10 +1,14 @@
 .hotel-request {
-  font-size: @regular-size;
   &__title {
     font-size: 21px;
   }
+  &__text {
+    font-size: @regular-size;
+    line-height: @regular-line-height;
+  }
   &__link {
     font-size: 21px;
+    font-weight: bold;
     text-decoration: none;
     color: @white;
     background-color: @blue;
