--- a/source/less/blocks/pictures-list.less
+++ b/source/less/blocks/pictures-list.less
@@ -2,9 +2,11 @@
   &__name {
     font-size: @regular-size;
     font-weight: bold;
+    line-height: @regular-line-height;
   }
   &__author {
-    font-size: 12px;
+    font-size: @regular-size;
+    line-height: 24px;
     text-transform: none;
   }
   &__item {
@@ -13,8 +15,8 @@
   }
   &__likes {
     padding-left: 55px;
-    font-size: 14px;
-    line-height: 24px;
+    font-size: @regular-size;
+    line-height: @regular-line-height;
     font-weight: bold;
   }
 }
