--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -7,6 +7,7 @@
   }
   &__description {
     font-size: @regular-size;
+    line-height: @regular-line-height;
   }
   &__list {
     list-style-type: none;
