--- a/source/less/blocks/cite-nav.less
+++ b/source/less/blocks/cite-nav.less
@@ -1,9 +1,13 @@
 .cite-nav {
   list-style-type: none;
-  padding-left: 0;
+  padding: 0;
+  margin: 0;
   background-color: @blue;
 
   &__item {
+    height: 56px;
+    text-align: center;
+    padding-top: 5px;
     border-bottom: 1px solid @dark-blue;
     border-top: 1px solid @light-blue;
 
