--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,4 +1,15 @@
+.page-main {
+  width: 320px;
+  margin: 0 auto;
+  outline: 1px solid @black;
+}
+
 .page-main__header {
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
+  background-position: 50% 53%;
+
+  &--index {
+    padding: 20px;
+  }
 }
