--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -1,9 +1,20 @@
 .reasons {
+
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 260px;
+    height: 240px;
+    margin: 0 auto;
+  }
+
   &__title {
     font-size: @title-size;
+    text-align: center;
   }
 
   &__intro {
     font-size: @regular-size;
+    text-align: center;
   }
 }
