index gallery flexed

--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -7,7 +7,12 @@
 .page-main__header {
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: 50% 53%;
+  background-position: 60% 83%;
+
+  &--inner {
+    height: 158px;
+    padding: 52px;
+  }
 
   &--index {
     padding: 20px;
