--- a/source/less/blocks/video-list.less
+++ b/source/less/blocks/video-list.less
@@ -1,10 +1,15 @@
 .video-list {
+  min-height: 459px;
+  text-align: center;
+
   &__title {
     font-size: @title-size;
     font-weight: bold;
   }
 
   &__description {
+    width: 240px;
+    margin: 0 auto;
     font-size: @regular-size;
     line-height: @regular-line-height;
   }
