--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -1,5 +1,6 @@
 .gallery {
   &__wrapper {
+    text-align: center;
     min-height: 190px;
     border-bottom: 1px solid @grey-border;
   }
@@ -9,12 +10,15 @@
   }
 
   &__description {
+    width: 280px;
+    margin: 0 auto;
     font-size: @regular-size;
     line-height: @regular-line-height;
   }
 
   &__list {
     list-style-type: none;
-    padding-left: 0;
+    padding: 0;
+    margin: 0;
   }
 }
