header tablet flexed

--- a/source/less/globals/common.less
+++ b/source/less/globals/common.less
@@ -7,6 +7,18 @@ body {
   min-width: 320px;
 }
 
+@media (min-width: @tablet-width) {
+  body {
+    min-width: @tablet-width;
+  }
+}
+
+@media (min-width: @desctop-width) {
+  body {
+    min-width: @desctop-width;
+  }
+}
+
 html {
   box-sizing: border-box;
 }
