--- a/source/less/blocks/cite-nav.less
+++ b/source/less/blocks/cite-nav.less
@@ -20,3 +20,20 @@
     }
   }
 }
+
+@media (min-width: @tablet-width) {
+  .cite-nav {
+    display: flex;
+    justify-content: space-between;
+    width: 700px;
+    background-color: @white;
+
+    &__item {
+      border: none;
+
+     a {
+       color: @black;
+     }
+   }
+ }
+}
