--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,1 +1,20 @@
+@media (min-width: @tablet-width) {
+  .main-nav {
+    display: flex;
+    padding: 0 34px;
 
+    &__open-button {
+      display: none;
+    }
+  }
+}
+
+@media (min-width: @desctop-width) {
+  .main-nav {
+    display: flex;
+
+    &__open-button {
+      display: none;
+    }
+  }
+}
