index tablet flexed

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -11,3 +11,12 @@
     font-size: @regular-size;
   }
 }
+
+@media (min-width: @tablet-width) {
+  .contacts {
+    display: flex;
+    justify-content: space-around;
+    align-items: baseline;
+    padding-top: 0;
+  }
+}
