--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -18,3 +18,13 @@
     text-align: center;
   }
 }
+
+@media (min-width: @tablet-width) {
+  .reasons {
+    &__wrapper {
+      width: 500px;
+      height: 206px;
+      margin: 0 auto;
+    }
+  }
+}
