--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -3,3 +3,11 @@
   margin: 0 auto;
   outline: 1px solid @black;
 }
+
+@media (min-width: @tablet-width) {
+  .page-footer {
+    width: @tablet-width;
+    margin: 0 auto;
+    outline: 1px solid @black;
+  }
+}
