gallery tablet flexed

--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -22,3 +22,20 @@
     margin: 0;
   }
 }
+
+@media (min-width: @tablet-width) {
+  .gallery {
+    width: 648px;
+    margin: 0 auto;
+
+    &__wrapper {
+      width: 100%;
+      border-bottom: none;
+    }
+
+    &__description {
+      width: 440px;
+      margin: 0 auto;
+    }
+  }
+}
