--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -36,5 +36,16 @@
         height: 350px;
       }
     }
+
+    &--inner {
+      height: 290px;
+      padding-top: 95px;
+      padding-left: 155px;
+
+      img {
+        width: 460px;
+        height: 78px;
+      }
+    }
   }
 }
