--- a/source/less/blocks/pictures-list.less
+++ b/source/less/blocks/pictures-list.less
@@ -24,3 +24,39 @@
     font-weight: bold;
   }
 }
+
+@media (min-width: @tablet-width) {
+  .pictures-list {
+    display: flex;
+    flex-wrap: wrap;
+
+    &__item {
+      display: flex;
+      flex-wrap: wrap;
+      width: 324px;
+      height: 347px;
+      background-color: @grey-field;
+      padding: 0;
+      margin: 0;
+      border-bottom: none;
+
+    }
+
+    &__item:first-of-type {
+      width: 100%;
+      height: 480px;
+    }
+
+    &__item--bg-grey {
+      background-color: @grey-gallery;
+    }
+
+    &__link {
+      width: 100%;
+    }
+
+    &__likes {
+      align-self: center;
+    }
+  }
+}
