--- a/source/less/blocks/video-list.less
+++ b/source/less/blocks/video-list.less
@@ -7,10 +7,18 @@
     font-weight: bold;
   }
 
-  &__description {
+  &__wrapper {
     width: 240px;
     margin: 0 auto;
     font-size: @regular-size;
     line-height: @regular-line-height;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .video-list {
+    &__wrapper {
+      width: 420px;
+    }
   }
 }
