form tablet flexed

--- a/source/less/blocks/comments-form.less
+++ b/source/less/blocks/comments-form.less
@@ -16,3 +16,13 @@
     border: none;
   }
 }
+
+@media (min-width: @tablet-width) {
+  .comments-form {
+    width: 100%;
+
+    &__field {
+      width: 100%;
+    }
+  }
+}
