--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -12,3 +12,14 @@
     border: none;
   }
 }
+
+@media (min-width: @tablet-width) {
+  .feedback {
+    display: flex;
+    flex-wrap: wrap;
+
+    &__form {
+      border-bottom: none;
+    }
+  }
+}
