--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -14,3 +14,14 @@
     line-height: @regular-line-height;
   }
 }
+
+@media (min-width: @tablet-width) {
+  .form {
+    width: 648px;
+    margin: 0 auto;
+
+    &__wrapper {
+      border-bottom: none;
+    }
+  }
+}
