--- a/source/less/blocks/impression-form.less
+++ b/source/less/blocks/impression-form.less
@@ -12,3 +12,11 @@
     font-weight: bold;
   }
 }
+
+@media (min-width: @tablet-width) {
+  .impression-form {
+    width: 323px;
+    border-right: 1px solid @grey-border;
+    order: -1;
+  }
+}
