index desctop flexed

--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -11,3 +11,9 @@
     outline: 1px solid @black;
   }
 }
+
+@media (min-width: @desctop-width) {
+  .page-footer {
+    width: @desctop-width;
+  }
+}
