--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -49,3 +49,34 @@
     }
   }
 }
+
+@media (min-width: @desctop-width) {
+  .page-main {
+    width: @desctop-width;
+    margin: 0 auto;
+  }
+
+  .page-main__header {
+    &--index {
+      height: 518px;
+      padding-top: 77px;
+      padding-left: 370px;
+
+      img {
+        width: 460px;
+        height: 350px;
+      }
+    }
+
+    &--inner {
+      height: 290px;
+      padding-top: 95px;
+      padding-left: 370px;
+
+      img {
+        width: 460px;
+        height: 78px;
+      }
+    }
+  }
+}
