--- a/source/less/blocks/pictures-list.less
+++ b/source/less/blocks/pictures-list.less
@@ -39,7 +39,6 @@
       padding: 0;
       margin: 0;
       border-bottom: none;
-
     }
 
     &__item:first-of-type {
@@ -57,6 +56,15 @@
 
     &__likes {
       align-self: center;
+    }
+  }
+}
+
+@media (min-width: @desctop-width) {
+  .pictures-list {
+    &__item {
+      width: 400px;
+      background-color: inherit;
     }
   }
 }
