content wrapper sized

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -17,6 +17,19 @@
     display: flex;
     justify-content: space-around;
     align-items: baseline;
+    max-width: 648px;
+    margin: 0 auto;
+    padding-top: 0;
+  }
+}
+
+@media (min-width: @desctop-width) {
+  .contacts {
+    display: flex;
+    justify-content: space-around;
+    align-items: baseline;
+    max-width: 960px;
+    margin: 0 auto;
     padding-top: 0;
   }
 }
