--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -17,7 +17,7 @@
 
 @media (min-width: @tablet-width) {
   .form {
-    width: 648px;
+    max-width: 648px;
     margin: 0 auto;
 
     &__wrapper {
@@ -28,6 +28,7 @@
 
 @media (min-width: @desctop-width) {
   .form {
-    width: 960px;
+    max-width: 960px;
+    margin: 0 auto;
   }
 }
