--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -25,7 +25,7 @@
 
 @media (min-width: @tablet-width) {
   .gallery {
-    width: 648px;
+    max-width: 648px;
     margin: 0 auto;
 
     &__wrapper {
@@ -42,6 +42,7 @@
 
 @media (min-width: @desctop-width) {
   .gallery {
-    width: @desctop-width;
+    max-width: 960px;
+    margin: 0 auto;
   }
 }
