--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,6 +1,8 @@
 @media (min-width: @tablet-width) {
   .main-nav {
     display: flex;
+    max-width: 648px;
+    margin: 0 auto;
 
     &__open-button {
       display: none;
@@ -11,6 +13,8 @@
 @media (min-width: @desctop-width) {
   .main-nav {
     display: flex;
+    max-width: 960px;
+    margin: 0 auto;
 
     &__open-button {
       display: none;
