--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,19 +1,4 @@
 .page-footer {
-  width: 320px;
-  margin: 0 auto;
+  width: 100%;
   outline: 1px solid @black;
-}
-
-@media (min-width: @tablet-width) {
-  .page-footer {
-    width: @tablet-width;
-    margin: 0 auto;
-    outline: 1px solid @black;
-  }
-}
-
-@media (min-width: @desctop-width) {
-  .page-footer {
-    width: @desctop-width;
-  }
 }
