--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,17 +1,4 @@
 .page-header {
-  width: 320px;
-  margin: 0 auto;
+  width: 100%;
   outline: 1px solid @black;
-}
-
-@media (min-width: @tablet-width) {
-  .page-header {
-    width: @tablet-width;
-  }
-}
-
-@media (min-width: @desctop-width) {
-  .page-header {
-    width: @desctop-width;
-  }
 }
