--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,6 +1,5 @@
 .page-main {
-  width: 320px;
-  margin: 0 auto;
+  width: 100%;
   outline: 1px solid @black;
 }
 
@@ -20,10 +19,6 @@
 }
 
 @media (min-width: @tablet-width) {
-  .page-main {
-    width: @tablet-width;
-    margin: 0 auto;
-  }
 
   .page-main__header {
     &--index {
@@ -51,10 +46,6 @@
 }
 
 @media (min-width: @desctop-width) {
-  .page-main {
-    width: @desctop-width;
-    margin: 0 auto;
-  }
 
   .page-main__header {
     &--index {
