--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -5,7 +5,7 @@
 .page-main__header {
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: 60% 83%;
+  background-color: @blue-bg;
 
   &--inner {
     height: 158px;
@@ -18,7 +18,6 @@
 }
 
 @media (min-width: @tablet-width) {
-
   .page-main__header {
     &--index {
       height: 518px;
@@ -45,7 +44,6 @@
 }
 
 @media (min-width: @desctop-width) {
-
   .page-main__header {
     &--index {
       height: 518px;
