--- a/source/less/blocks/reasons-list.less
+++ b/source/less/blocks/reasons-list.less
@@ -60,7 +60,6 @@
     flex-wrap: wrap;
 
     &__text {
-      width: 170px;
       padding-top: 10px;
     }
 
@@ -75,8 +74,6 @@
 
   .reasons-list__item {
     &--bg-grey {
-      width: 256px;
-      height: 256px;
       padding-top: 30px;
       padding-left: 54px;
       padding-right: 53px;
@@ -85,12 +82,39 @@
     &--bg-blue {
       display: flex;
       width: 100%;
-      height: 256px;
+      height: 260px;
     }
 
     &--add-info {
       background-color: @white;
-      width: 170px;
+      height: 330px;
+      padding-left: 0;
+    }
+  }
+}
+
+@media (min-width: @desctop-width) {
+  .reasons-list {
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .reasons-list__item {
+    &--bg-grey {
+      padding-top: 30px;
+      padding-left: 54px;
+      padding-right: 53px;
+    }
+
+    &--bg-blue {
+      display: flex;
+      width: 100%;
+      height: 260px;
+    }
+
+    &--add-info {
+      background-color: @white;
       height: 330px;
       padding-left: 0;
     }
