--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,6 +4,7 @@
 @import "globals/fonts";
 @import "globals/common";
 @import "globals/visually-hidden";
+@import "globals/columns";
 
 @import "blocks/content-wrapper";
 @import "blocks/page-header";
