--- a/source/less/blocks/cite-nav.less
+++ b/source/less/blocks/cite-nav.less
@@ -36,3 +36,19 @@
     }
   }
 }
+
+@media (min-width: @desctop-width) {
+  .cite-nav {
+    display: flex;
+    justify-content: space-between;
+    background-color: @white;
+
+    &__item {
+      border: none;
+
+      a {
+       color: @black;
+      }
+    }
+  }
+}
