--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -28,3 +28,13 @@
     }
   }
 }
+
+@media (min-width: @desctop-width) {
+  .reasons {
+    &__wrapper {
+      width: 500px;
+      height: 206px;
+      margin: 0 auto;
+    }
+  }
+}
