--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -29,13 +29,11 @@
     margin: 0 auto;
 
     &__wrapper {
-      width: 100%;
       border-bottom: none;
     }
 
     &__description {
       width: 440px;
-      margin: 0 auto;
     }
   }
 }
@@ -44,5 +42,13 @@
   .gallery {
     max-width: 960px;
     margin: 0 auto;
+
+    &__wrapper {
+      border-bottom: none;
+    }
+
+    &__description {
+      width: 440px;
+    }
   }
 }
