--- a/source/less/blocks/pictures-list.less
+++ b/source/less/blocks/pictures-list.less
@@ -33,7 +33,6 @@
     &__item {
       display: flex;
       flex-wrap: wrap;
-      width: 324px;
       height: 347px;
       background-color: @grey-field;
       padding: 0;
@@ -50,10 +49,6 @@
       background-color: @grey-gallery;
     }
 
-    &__link {
-      width: 100%;
-    }
-
     &__likes {
       align-self: center;
     }
@@ -62,9 +57,24 @@
 
 @media (min-width: @desctop-width) {
   .pictures-list {
+    display: flex;
+    flex-wrap: wrap;
+
     &__item {
-      width: 400px;
-      background-color: inherit;
+      display: flex;
+      flex-direction: column;
+      padding: 0;
+      margin: 0;
+      border-bottom: none;
+    }
+
+    &__item:first-of-type {
+      width: 100%;
+      height: 480px;
+    }
+
+    &__likes {
+      align-self: center;
     }
   }
 }
