--- a/source/less/blocks/comments-form.less
+++ b/source/less/blocks/comments-form.less
@@ -26,3 +26,13 @@
     }
   }
 }
+
+@media (min-width: @desctop-width) {
+  .comments-form {
+    width: 100%;
+
+    &__field {
+      width: 100%;
+    }
+  }
+}
