--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -23,3 +23,14 @@
     }
   }
 }
+
+@media (min-width: @desctop-width) {
+  .feedback {
+    display: flex;
+    flex-wrap: wrap;
+
+    &__form {
+      border-bottom: none;
+    }
+  }
+}
