--- a/source/less/blocks/impression-form.less
+++ b/source/less/blocks/impression-form.less
@@ -15,7 +15,7 @@
 
 @media (min-width: @tablet-width) {
   .impression-form {
-    width: 323px;
+    width: 50%;
     border-right: 1px solid @grey-border;
     order: -1;
   }
@@ -23,6 +23,6 @@
 
 @media (min-width: @desctop-width) {
   .impression-form {
-    width: 475px;
+    width: 50%;
   }
 }
