--- a/source/less/blocks/introduce-form.less
+++ b/source/less/blocks/introduce-form.less
@@ -21,12 +21,12 @@
 
 @media (min-width: @tablet-width) {
   .introduce-form {
-    width: 323px;
+    width: 50%;
   }
 }
 
 @media (min-width: @desctop-width) {
   .introduce-form {
-    width: 475px;
+    width: 50%;
   }
 }
