--- a/source/less/blocks/content-wrapper.less
+++ b/source/less/blocks/content-wrapper.less
@@ -6,7 +6,6 @@
 @media (min-width: @tablet-width) {
   .content-wrapper {
     max-width: @tablet-width;
-    margin: 0 auto;
     box-shadow: 0 0 4px 0 @grey-shadow;
   }
 }
@@ -14,6 +13,6 @@
 @media (min-width: @desctop-width) {
   .content-wrapper {
     max-width: @desctop-width;
-    margin: 0 auto;
+    box-shadow: 0 0 4px 0 @grey-shadow;
   }
 }
