index mobile corrected

--- a/source/less/blocks/reasons-list.less
+++ b/source/less/blocks/reasons-list.less
@@ -6,11 +6,15 @@
   margin: 0;
 
   &__text {
-    width: 275px;
+    width: 255px;
+    height: 191px;
     margin: 0 auto;
     text-align: center;
-    padding-top: 60px;
-    padding-bottom: 40px;
+    padding-top: 20px;
+  }
+
+  &__text--bg-blue {
+    width: 275px;
   }
 
   &__title {
@@ -35,6 +39,7 @@
 }
 
 .reasons-list__item {
+
   &--bg-grey {
     min-height: 168px;
     text-align: center;
@@ -42,14 +47,16 @@
   }
 
   &--bg-blue {
-    height: 450px;
+    height: 451px;
     color: @white;
     background-color: @blue;
   }
 
   &--add-info {
+    height: 139px;
     background-color: @white;
     padding-left: 70px;
+    padding-right: 20px;
   }
 }
 
