--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -4,17 +4,20 @@
 
 .page-main__header {
   background-image: url("../img/bg-back-mobile@1x.jpg");
+  background-size: cover;
   background-repeat: no-repeat;
   background-color: @blue-bg;
+
+  &--index {
+    height: 389px;
+    padding: 20px;
+  }
 
   &--inner {
     height: 158px;
     padding: 52px;
   }
 
-  &--index {
-    padding: 20px;
-  }
 }
 
 @media (min-width: @tablet-width) {
