index tablet corected

--- a/source/less/blocks/hotel-request.less
+++ b/source/less/blocks/hotel-request.less
@@ -24,6 +24,11 @@
 @media (min-width: @tablet-width) {
   .hotel-request {
     height: 318px;
+
+    &__wrapper {
+      width: 462px;
+      margin: 0 auto;
+    }
   }
 }
 
