--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -18,6 +18,7 @@
     display: flex;
     justify-content: space-around;
     align-items: baseline;
+    height: 120px;
     max-width: 648px;
     margin: 0 auto;
     padding-top: 0;
