--- a/source/less/blocks/reasons-list.less
+++ b/source/less/blocks/reasons-list.less
@@ -67,7 +67,12 @@
     flex-wrap: wrap;
 
     &__text {
+      width: 160px;
       padding-top: 10px;
+    }
+
+    &__text--bg-blue {
+      width: 180px;
     }
 
     &__title {
@@ -77,25 +82,32 @@
     &__img--bridge {
       order: -1;
     }
+
+    &__add-info-wrapper {
+      width: 165px;
+      margin: 0 auto;
+    }
   }
 
   .reasons-list__item {
     &--bg-grey {
+      height: 256px;
       padding-top: 30px;
-      padding-left: 54px;
-      padding-right: 53px;
     }
 
     &--bg-blue {
       display: flex;
       width: 100%;
-      height: 260px;
+      height: 256px;
     }
 
     &--add-info {
+      text-align: center;
       background-color: @white;
       height: 330px;
+      padding-top: 60px;
       padding-left: 0;
+      padding-right: 0;
     }
   }
 }
