header index mobile styling

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,3 +1,27 @@
+.main-nav {
+  position: relative;
+
+  &__logo {
+    position: absolute;
+    left: 110px;
+  }
+
+  &__open-button {
+    position: absolute;
+    bottom: -30px;
+    right: 20px;
+    width: 23px;
+    height: 4px;
+    background-color: @blue;
+    border: none;
+    border-bottom: 1px solid @light-blue-btn;
+    border-top: 1px solid @light-blue-btn;
+    box-shadow:
+      0 8px 0 0 @blue,
+      0 -9px 0 0 @blue;
+  }
+}
+
 @media (min-width: @tablet-width) {
   .main-nav {
     display: flex;
