--- a/source/less/blocks/cite-nav.less
+++ b/source/less/blocks/cite-nav.less
@@ -5,11 +5,18 @@
   background-color: @blue;
 
   &__item {
-    height: 56px;
+    min-height: 56px;
     text-align: center;
-    padding-top: 5px;
+    padding-top: 6px;
     border-bottom: 1px solid @dark-blue;
     border-top: 1px solid @light-blue;
+  }
+
+  &__item:last-child {
+    min-height: 55px;
+    border-bottom: none;
+    box-shadow: inset 0 -2px 7px -1px @dark-blue;
+  }
 
     a {
       color: @white;
@@ -19,7 +26,6 @@
       text-decoration: none;
     }
   }
-}
 
 @media (min-width: @tablet-width) {
   .cite-nav {
