--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -4,13 +4,15 @@
     display: flex;
     flex-direction: column;
     width: 260px;
-    height: 202px;
     margin: 0 auto;
+    padding-top: 28px;
+    padding-bottom: 12px;
   }
 
   &__title {
     font-size: @title-size;
     text-align: center;
+    padding-bottom: 2px;
   }
 
   &__intro {
