--- a/source/less/globals/variables.less
+++ b/source/less/globals/variables.less
@@ -4,6 +4,7 @@
 @dark-blue: #678fa8;
 @light-blue: #9ac2db;
 @blue-bg: #84b6d1;
+@light-blue-btn: #c0d9e8;
 
 @grey: #eeeeee;
 @grey-border: #e5e5e5;
