--- a/source/less/blocks/social-list.less
+++ b/source/less/blocks/social-list.less
@@ -1,6 +1,15 @@
 .social-list {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   list-style-type: none;
   padding-left: 0;
+  margin-left: 83px;
+  margin-bottom: 28px;
+}
+
+.social-list__item {
+  width: 46px;
+  height: 48px;
+  margin-right: 7px;
+  background-color: @blue;
 }
