--- a/source/less/blocks/hotel-request.less
+++ b/source/less/blocks/hotel-request.less
@@ -1,18 +1,26 @@
 .hotel-request {
-  min-height: 287px;
-  padding-top: 33px;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   text-align: center;
 
   &__title {
+    display: block;
     font-size: 21px;
+    margin-bottom: 19px;
   }
 
   &__text {
     font-size: @regular-size;
     line-height: @regular-line-height;
+    margin-bottom: 35px;
   }
 
   &__link {
+    display: block;
+    width: 100%;
+    height: 58px;
+    padding-top: 16px;
     font-size: 21px;
     font-weight: bold;
     text-decoration: none;
