--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -25,11 +25,15 @@
 @media (min-width: @tablet-width) {
   .main-nav {
     display: flex;
-    max-width: 648px;
+    width: 670px;
     margin: 0 auto;
 
     &__open-button {
       display: none;
+    }
+
+    &__logo {
+      left: 285px;
     }
   }
 }
@@ -40,8 +44,5 @@
     max-width: 960px;
     margin: 0 auto;
 
-    &__open-button {
-      display: none;
-    }
   }
 }
