--- a/source/less/blocks/cite-nav.less
+++ b/source/less/blocks/cite-nav.less
@@ -5,15 +5,14 @@
   background-color: @blue;
 
   &__item {
-    min-height: 56px;
     text-align: center;
-    padding-top: 6px;
+    padding-top: 7px;
+    padding-bottom: 7px;
     border-bottom: 1px solid @dark-blue;
     border-top: 1px solid @light-blue;
   }
 
   &__item:last-child {
-    min-height: 55px;
     border-bottom: none;
     box-shadow: inset 0 -2px 7px -1px @dark-blue;
   }
@@ -33,7 +32,8 @@
     display: flex;
     justify-content: space-between;
     background-color: @white;
-    padding-top: 7px;
+    padding-top: 8px;
+    padding-left: 1px;
 
     &__item:last-child {
       box-shadow: none;
@@ -41,12 +41,13 @@
     }
 
     &__item:nth-child(2) {
-      margin-right: 160px;
+      margin-right: 210px;
     }
 
     &__item {
+      width: 20%;
       padding: 0;
-      margin-right: 76px;
+      margin-right: 45px;
       border: none;
 
       a {
