reasons list tablet

--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -25,7 +25,12 @@
   .reasons {
     &__wrapper {
       width: 500px;
-      height: 206px;
+      padding-top: 36px;
+      padding-bottom: 34px;
+    }
+
+    &__title {
+      font-size: 21px;
     }
   }
 }
@@ -34,7 +39,6 @@
   .reasons {
     &__wrapper {
       width: 500px;
-      height: 206px;
     }
   }
 }
