--- a/source/less/blocks/reasons-list.less
+++ b/source/less/blocks/reasons-list.less
@@ -74,16 +74,13 @@
     flex-wrap: wrap;
 
     &__text {
-      width: 160px;
-      padding-top: 10px;
-    }
-
-    &__text--bg-blue {
-      width: 180px;
+      width: 100%;
     }
 
     &__title {
+      font-size: 21px;
       line-height: 26px;
+      margin-bottom: -6px;
     }
 
     &__img--bridge {
@@ -91,30 +88,37 @@
     }
 
     &__add-info-wrapper {
-      width: 165px;
+      width: 180px;
       margin: 0 auto;
+      padding-left: 15px;
+    }
+
+    &__add-info-title {
+      font-size: 21px;
+      padding-bottom: 8px;
     }
   }
 
   .reasons-list__item {
     &--bg-grey {
-      height: 256px;
-      padding-top: 30px;
+      padding-top: 40px;
+      padding-bottom: 35px;
+      padding-left: 60px;
+      padding-right: 60px;
+
     }
 
     &--bg-blue {
       display: flex;
-      width: 100%;
-      height: 256px;
     }
 
     &--add-info {
       text-align: center;
       background-color: @white;
-      height: 330px;
-      padding-top: 60px;
+      padding-top: 134px;
       padding-left: 0;
       padding-right: 0;
+      padding-bottom: 46px;
     }
   }
 }
