--- a/source/less/blocks/social-list.less
+++ b/source/less/blocks/social-list.less
@@ -4,13 +4,14 @@
   list-style-type: none;
   padding-left: 0;
   margin-left: 83px;
-  margin-bottom: 28px;
 }
 
 .social-list__item {
   width: 46px;
   height: 48px;
   margin-right: 7px;
+  padding-top: 11px;
+  padding-left: 14px;
   background-color: @blue;
 
   svg {
