--- a/source/less/blocks/hotel-request.less
+++ b/source/less/blocks/hotel-request.less
@@ -31,11 +31,21 @@
 
 @media (min-width: @tablet-width) {
   .hotel-request {
-    height: 318px;
+    margin-bottom: 58px;
 
     &__wrapper {
-      width: 462px;
+      width: 460px;
       margin: 0 auto;
+    }
+
+    &__title {
+      font-size: 30px;
+      margin-top: 27px;
+      margin-bottom: 30px;
+    }
+
+    &__text {
+      margin-bottom: 43px;
     }
   }
 }
