--- a/source/less/blocks/reasons-list.less
+++ b/source/less/blocks/reasons-list.less
@@ -7,7 +7,6 @@
   margin-bottom: 7px;
 
   &__text--bg-blue {
-    width: 100%;
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 64px;
@@ -117,17 +116,24 @@
 @media (min-width: @tablet-width) {
   .reasons-list {
     flex-direction: row;
-    justify-content: space-between;
     flex-wrap: wrap;
 
-    &__text {
-      width: 100%;
+    &__text--bg-blue {
+      padding-top: 45px;
+    }
+
+    &__img {
+      height: 255px;
+    }
+
+    &__description {
+      padding-left: 28px;
+      padding-right: 22px;
     }
 
     &__title {
       font-size: 21px;
       line-height: 26px;
-      margin-bottom: -6px;
     }
 
     &__img--bridge {
@@ -137,25 +143,32 @@
     &__add-info-wrapper {
       width: 180px;
       margin: 0 auto;
-      padding-left: 15px;
+      padding-top: 25px;
+      padding-left: 10px;
+      padding-bottom: 15px;
     }
 
     &__add-info-title {
       font-size: 21px;
-      padding-bottom: 8px;
+      padding-bottom: 21px;
+    }
+
+    &__text--bg-grey {
+      width: 210px;
+      outline: 1px solid @black;
     }
   }
 
   .reasons-list__item {
     &--bg-grey {
-      padding-top: 40px;
-      padding-bottom: 35px;
-      padding-left: 60px;
-      padding-right: 60px;
+      padding-top: 46px;
+      padding-bottom: 30px;
+      padding-left: 25px;
     }
 
     &--bg-blue {
       display: flex;
+      width: 100%;
     }
 
     &--add-info {
@@ -170,11 +183,6 @@
 }
 
 @media (min-width: @desctop-width) {
-  .reasons-list {
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
 
   .reasons-list__item {
     &--bg-grey {
@@ -194,5 +202,5 @@
       height: 330px;
       padding-left: 0;
     }
-  }
-}
+   }
+ }
