--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -10,9 +10,22 @@
   background-color: @blue-bg;
 
   &--index {
+    position: relative;
     height: 389px;
     padding-top: 90px;
     padding-left: 20px;
+  }
+
+  &--index::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: -11px;
+    width: 105%;
+    height: 28px;
+    background-image: url("../img/bg-intro-triangle-mobile.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   &--inner {
@@ -33,6 +46,30 @@
         width: 460px;
         height: 350px;
       }
+    }
+
+    &--index::before {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 29px;
+      width: 92.5%;
+      height: 57px;
+      background-image: url("../img/bg-intro-triangle-mobile.svg");
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+
+    &--index::after {
+      content: "";
+      position: absolute;
+      bottom: -10px;
+      left: -15px;
+      width: 105%;
+      height: 50px;
+      background-image: url("../img/bg-intro-triangle-mobile.svg");
+      background-repeat: no-repeat;
+      background-size: cover;
     }
 
     &--inner {
