--- a/source/less/blocks/social-list.less
+++ b/source/less/blocks/social-list.less
@@ -13,6 +13,21 @@
   padding-left: 14px;
   background-color: @blue;
 
+  &--twitter {
+    padding-top: 12px;
+    padding-left: 15px;
+  }
+
+  &--fb {
+    padding-top: 13px;
+    padding-left: 19px;
+  }
+
+  &--youtube {
+    padding-top: 12px;
+    padding-left: 13px;
+  }
+
   svg {
     fill: @white
   }
