index tablet almost done

--- a/source/less/blocks/hotel-request.less
+++ b/source/less/blocks/hotel-request.less
@@ -1,5 +1,5 @@
 .hotel-request {
-  padding-top: 20px;
+  padding-top: 23px;
   padding-left: 20px;
   padding-right: 20px;
   text-align: center;
@@ -14,6 +14,10 @@
     font-size: @regular-size;
     line-height: @regular-line-height;
     margin-bottom: 35px;
+  }
+
+  &__new-line {
+    display: block;
   }
 
   &__link {
