--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -27,11 +27,12 @@
     &__wrapper {
       width: 500px;
       padding-top: 36px;
-      padding-bottom: 34px;
+      padding-bottom: 36px;
     }
 
     &__title {
       font-size: 21px;
+      padding: 0;
     }
   }
 }
