--- a/source/less/blocks/reasons-list.less
+++ b/source/less/blocks/reasons-list.less
@@ -24,17 +24,12 @@
     }
   }
 
-  &__new-line {
-    display: block;
-    margin-bottom: -6px;
-  }
-
   &__title {
     font-size: @title-size;
     line-height: 10px;
     padding: 0;
     margin: 0;
-    padding-bottom: 13px;
+    padding-bottom: 12px;
   }
 
   &__number,
@@ -142,6 +137,10 @@
       padding-top: 45px;
     }
 
+    &__new-line {
+      display: block;
+    }
+
     &__img {
       height: 255px;
     }
@@ -163,8 +162,9 @@
     &__add-info-wrapper {
       width: 180px;
       margin: 0 auto;
+      margin-right: 44px;
       padding-top: 25px;
-      padding-left: 10px;
+      padding-left: 15px;
       padding-bottom: 15px;
     }
 
@@ -173,31 +173,35 @@
       padding-bottom: 21px;
     }
 
-    &__text--bg-grey {
-      width: 210px;
-
-      h2 {
-        padding: 0;
-        padding-bottom: 10px;
-      }
-
-      span {
-        display: block;
-        margin-bottom: 21px;
+    &__add-info--motel {
+      svg {
+        top: 60px;
+        left: 0;
+        width: 100%;
+        fill: @blue;
       }
     }
 
-    &__text--narrow {
-      padding-left: 0;
-      padding-right: 11px;
-
-      h2 {
-        display: block;
-        text-align: center;
-        width: 110px;
-        margin: 0 auto;
-        padding-left: 10px;
+    &__add-info--food {
+      svg {
+        top: 62px;
+        left: 0;
+        width: 100%;
+        fill: @blue;
       }
+    }
+
+    &__add-info--souvenir {
+      svg {
+        top: 57px;
+        left: 0;
+        width: 100%;
+        fill: @blue;
+      }
+    }
+
+    &__text--bg-grey {
+      width: 210px;
     }
   }
 
@@ -206,10 +210,42 @@
       display: none;
     }
 
+    &:first-child {
+      order: 1;
+    }
+
+    &:nth-child(2) {
+      order: 2;
+    }
+
+    &:nth-child(3) {
+      order: 4;
+    }
+
+    &:nth-child(4) {
+      order: 3;
+    }
+
+    &:nth-child(5) {
+      order: 5;
+    }
+
+    &:nth-child(6) {
+      order: 6;
+    }
+
+    &:nth-child(7) {
+      order: 7;
+    }
+
+    &:last-child {
+      order: 8;
+    }
+
     &--bg-grey {
-      padding-top: 46px;
-      padding-bottom: 30px;
-      padding-left: 25px;
+      padding-top: 45px;
+      padding-bottom: 27px;
+      padding-left: 24px;
     }
 
     &--bg-blue {
