index desctop styling

--- a/source/less/blocks/cite-nav.less
+++ b/source/less/blocks/cite-nav.less
@@ -63,5 +63,9 @@
     display: flex;
     justify-content: space-between;
     background-color: @white;
+
+    &__item {
+      margin-right: -20px;
+    }
   }
 }
