--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -41,9 +41,11 @@
 
 @media (min-width: @desctop-width) {
   .main-nav {
-    display: flex;
-    max-width: 960px;
+    width: 1200px;
     margin: 0 auto;
 
+    &__logo {
+      left: 548px;
+    }
   }
 }
