index tablet corrected

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -39,15 +39,20 @@
 
     &__list {
       margin-left: 0;
+      margin-right: 3px;
     }
 
     &__tag {
-      margin-left: 0;
+      margin-left: 2px;
     }
 
     &__developer {
       margin-left: 0;
-      margin-right: 41px;
+      margin-right: 38px;
+
+      svg {
+        top: -5px;
+      }
     }
   }
 }
