--- a/source/less/blocks/reasons-list.less
+++ b/source/less/blocks/reasons-list.less
@@ -137,7 +137,7 @@
     flex-wrap: wrap;
 
     &__bg-blue-wrapper {
-      padding-top: 45px;
+      padding-top: 44px;
     }
 
     &__new-line {
@@ -188,9 +188,13 @@
     }
 
     &__add-info--food {
+
+      h2 {
+        padding-top: 2px;
+      }
       svg {
-        top: 62px;
-        left: 0;
+        top: 63px;
+        left: 1px;
         width: 100%;
         fill: @blue;
       }
@@ -249,7 +253,7 @@
 
     &--bg-grey {
       padding-top: 45px;
-      padding-bottom: 27px;
+      padding-bottom: 29px;
       padding-left: 24px;
     }
 
@@ -264,7 +268,7 @@
       padding-top: 134px;
       padding-left: 0;
       padding-right: 0;
-      padding-bottom: 46px;
+      padding-bottom: 48px;
     }
   }
 }
