index desctop complete

--- a/source/less/blocks/hotel-request.less
+++ b/source/less/blocks/hotel-request.less
@@ -56,6 +56,10 @@
 
 @media (min-width: @desctop-width) {
   .hotel-request {
-    height: 331px;
+    margin-bottom: 66px;
+
+    &__text {
+      margin-bottom: 47px;
+    }
   }
 }
