--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -98,6 +98,32 @@
       }
     }
 
+    &--index::before {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: -4px;
+      width: 100%;
+      height: 60px;
+      background-image: url("../img/bg-intro-triangle-mobile.svg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      display: none;
+    }
+
+    &--index::after {
+      content: "";
+      position: absolute;
+      bottom: -10px;
+      left: -15px;
+      width: 110%;
+      height: 50px;
+      background-image: url("../img/bg-intro-triangle-mobile.svg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      display: none;
+    }
+
     &--inner {
       height: 290px;
       padding-top: 95px;
