--- a/source/less/blocks/reasons-list.less
+++ b/source/less/blocks/reasons-list.less
@@ -278,14 +278,34 @@
     &__bg-blue-wrapper {
       width: 380px;
       margin: 0 auto;
+      padding-top: 51px;
+    }
+
+    &__add-info-wrapper {
+      width: 300px;
+      margin-right: 58px;
+    }
+
+    &__add-info--motel {
+      svg {
+        left: -1px;
+      }
+    }
+
+    &__bg-grey-wrapper {
+      width: 350px;
+    }
+
+    &__new-line--desctop {
+      display: block;
     }
   }
 
   .reasons-list__item {
     &--bg-grey {
-      padding-top: 30px;
-      padding-left: 54px;
-      padding-right: 53px;
+      padding-top: 45px;
+      padding-left: 25px;
+      padding-bottom: 51px;
     }
 
     &--bg-blue {
@@ -297,6 +317,7 @@
     &--add-info {
       background-color: @white;
       padding-left: 0;
+      padding-bottom: 69px;
     }
    }
  }
