--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -1,16 +1,18 @@
 .gallery {
   &__wrapper {
-    min-height: 190px;
     text-align: center;
     border-bottom: 1px solid @grey-border;
+    padding-bottom: 27px;
+    margin-bottom: 2px;
   }
 
   &__title {
     font-size: @title-size;
+    margin-bottom: 26px;
   }
 
   &__description {
-    width: 280px;
+    width: 275px;
     margin: 0 auto;
     font-size: @regular-size;
     line-height: @regular-line-height;
@@ -20,6 +22,7 @@
     list-style-type: none;
     padding: 0;
     margin: 0;
+    margin-bottom: 34px;
   }
 }
 
