gallery tablet complete

--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -33,6 +33,13 @@
 
     &__wrapper {
       border-bottom: none;
+      margin-bottom: 42px;
+    }
+
+    &__title {
+      font-size: 30px;
+      padding-top: 35px;
+      padding-bottom: 5px;
     }
 
     &__description {
