--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -97,6 +97,30 @@
         height: 78px;
       }
     }
+
+    &--inner::before {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 29px;
+      width: 92.5%;
+      height: 57px;
+      background-image: url("../img/bg-intro-triangle-mobile.svg");
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+
+    &--inner::after {
+      content: "";
+      position: absolute;
+      bottom: -10px;
+      left: -15px;
+      width: 105%;
+      height: 50px;
+      background-image: url("../img/bg-intro-triangle-mobile.svg");
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
   }
 }
 
