--- a/source/less/blocks/pictures-list.less
+++ b/source/less/blocks/pictures-list.less
@@ -50,11 +50,13 @@
   .pictures-list {
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 22px;
 
     &__item {
       display: flex;
+      flex-direction: column;
       flex-wrap: wrap;
-      height: 347px;
+      width: 50%;
       background-color: @grey-field;
       padding: 0;
       margin: 0;
@@ -64,14 +66,22 @@
     &__item:first-of-type {
       width: 100%;
       height: 480px;
+
+      .pictures-list__wrapper {
+        display: flex;
+        justify-content: space-between;
+        width: 610px;
+        margin: 0 auto;
+      }
+    }
+
+    &__wrapper {
+      display: flex;
+      justify-content: space-between;
     }
 
     &__item--bg-grey {
       background-color: @grey-gallery;
-    }
-
-    &__likes {
-      align-self: center;
     }
   }
 }
