--- a/source/less/blocks/video-list.less
+++ b/source/less/blocks/video-list.less
@@ -100,6 +100,13 @@
     &__wrapper {
       width: 420px;
     }
+
+    &__title {
+      font-size: 30px;
+      padding: 0;
+      margin: 0;
+      margin-bottom: 31px;
+    }
   }
 }
 
