--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -50,11 +50,12 @@
 
 @media (min-width: @desctop-width) {
   .gallery {
-    max-width: 960px;
+    max-width: 1200px;
     margin: 0 auto;
 
     &__wrapper {
       border-bottom: none;
+      margin-bottom: 43px;
     }
 
     &__description {
