--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -164,14 +164,41 @@
     }
 
     &--inner {
-      height: 290px;
-      padding-top: 95px;
-      padding-left: 370px;
+      height: 300px;
+      padding-top: 105px;
+      margin-bottom: 77px;
+      text-align: center;
 
       img {
         width: 460px;
         height: 78px;
       }
+    }
+
+    &--inner::before {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: -4px;
+      width: 100%;
+      height: 60px;
+      background-image: url("../img/bg-intro-triangle-mobile.svg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      display: none;
+    }
+
+    &--inner::after {
+      content: "";
+      position: absolute;
+      bottom: -10px;
+      left: -15px;
+      width: 110%;
+      height: 50px;
+      background-image: url("../img/bg-intro-triangle-mobile.svg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      display: none;
     }
   }
 }
