--- a/source/less/blocks/pictures-list.less
+++ b/source/less/blocks/pictures-list.less
@@ -65,7 +65,6 @@
 
     &__item:first-of-type {
       width: 100%;
-      height: 480px;
 
       .pictures-list__wrapper {
         display: flex;
@@ -94,14 +93,20 @@
     &__item {
       display: flex;
       flex-direction: column;
+      width: 33.3%;
       padding: 0;
       margin: 0;
+      color: @white;
       border-bottom: none;
+      outline: 1px solid @black;
     }
 
     &__item:first-of-type {
       width: 100%;
-      height: 480px;
+    }
+
+    &__img {
+      margin: 0;
     }
 
     &__likes {
