--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,12 +1,12 @@
 .form {
   &__wrapper {
-    min-height: 203px;
     text-align: center;
     border-bottom: 1px solid @grey-border;
   }
 
   &__title {
     font-size: @title-size;
+    margin-bottom: 26px;
   }
 
   &__description {
