introduce form mobile complete

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -2,6 +2,8 @@
   &__wrapper {
     text-align: center;
     border-bottom: 1px solid @grey-border;
+    padding-bottom: 3px;
+    margin-bottom: 18px;
   }
 
   &__title {
