--- a/source/less/blocks/contacts-form.less
+++ b/source/less/blocks/contacts-form.less
@@ -1,21 +1,30 @@
 .contacts-form {
-  min-height: 288px;
+  width: 279px;
+  margin: 0 auto;
+  padding: 0;
 
   &__label {
     font-size: @title-size;
     font-weight: bold;
+    display: block;
+    text-align: center;
+    padding-bottom: 3px;
   }
 
   &__field {
     font-size: @title-size;
     font-weight: bold;
+    width: 100%;
+    height: 54px;
     padding-left: 22px;
+    margin-top: 7px;
     background-color: @grey-field;
     border: none;
   }
 
   &__input-label {
     font-size: @regular-size;
+    padding-left: 23px;
   }
 }
 
