--- a/source/less/blocks/contacts-form.less
+++ b/source/less/blocks/contacts-form.less
@@ -2,22 +2,23 @@
   width: 279px;
   margin: 0 auto;
   padding: 0;
+  padding-bottom: 13px;
+  margin-bottom: 18px;
 
   &__label {
     font-size: @title-size;
     font-weight: bold;
     display: block;
     text-align: center;
-    padding-bottom: 3px;
+    margin-bottom: 19px;
   }
 
   &__field {
     font-size: @title-size;
     font-weight: bold;
     width: 100%;
-    height: 54px;
+    height: 57px;
     padding-left: 22px;
-    margin-top: 7px;
     background-color: @grey-field;
     border: none;
   }
@@ -25,6 +26,8 @@
   &__input-label {
     font-size: @regular-size;
     padding-left: 23px;
+    display: block;
+    margin-bottom: 6px;
   }
 }
 
