--- a/source/less/blocks/impression-form.less
+++ b/source/less/blocks/impression-form.less
@@ -1,15 +1,52 @@
 .impression-form {
-  min-height: 288px;
+  width: 279px;
+  margin: 0 auto;
+  padding: 0;
 
   &__label {
     font-size: @title-size;
     font-weight: bold;
+    display: block;
+    text-align: center;
+    margin-bottom: 37px;
+  }
+
+  &__input {
+    margin-bottom: 43px;
+  }
+
+  &__field {
+    display: none;
   }
 
   &__input-label {
+    position: relative;
     font-size: @title-size;
     text-transform: none;
     font-weight: bold;
+    padding-left: 79px;
+  }
+
+  &__input-label::before {
+    content: "";
+    position: absolute;
+    top: -14px;
+    left: 0;
+    width: 55px;
+    height: 55px;
+    border-radius: 100%;
+    background-color: @grey-field;
+  }
+
+  &__field:checked + &__input-label::after {
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: 17px;
+    width: 21px;
+    height: 21px;
+    border-radius: 100%;
+    background-color: @black;
   }
 }
 
