form mobile complete

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,7 +1,10 @@
 .form {
+  width: 279px;
+  margin: 0 auto;
+  margin-bottom: 74px;
+
   &__wrapper {
     text-align: center;
-    border-bottom: 1px solid @grey-border;
     padding-bottom: 3px;
     margin-bottom: 18px;
   }
