--- a/source/less/blocks/impression-form.less
+++ b/source/less/blocks/impression-form.less
@@ -1,8 +1,6 @@
 .impression-form {
-  width: 279px;
-  margin: 0 auto;
   padding: 0;
-  margin-bottom: 18px;
+  padding-top: 32px;
 
   &__label {
     font-size: @title-size;
