--- a/source/less/blocks/sightseen-form.less
+++ b/source/less/blocks/sightseen-form.less
@@ -1,8 +1,6 @@
 .sightseen-form {
-  width: 279px;
-  margin: 0 auto;
   padding: 0;
-  padding-bottom: 25px;
+  padding-top: 19px;
 
   &__label {
     font-size: @title-size;
