--- a/source/less/blocks/comments-form.less
+++ b/source/less/blocks/comments-form.less
@@ -1,17 +1,22 @@
 .comments-form {
-  min-height: 350px;
-  border-bottom: none;
+  padding-top: 44px;
 
   &__input-label {
     font-size: @title-size;
     font-weight: bold;
+    display: block;
+    text-align: center;
+    margin-bottom: 18px;
   }
 
   &__field {
+    width: 100%;
+    height: 160px;
     font-size: @title-size;
     font-weight: bold;
     text-transform: none;
-    padding-left: 22px;
+    padding-top: 15px;
+    padding-left: 20px;
     background-color: @grey-field;
     border: none;
   }
