--- a/source/less/blocks/contacts-form.less
+++ b/source/less/blocks/contacts-form.less
@@ -1,16 +1,13 @@
 .contacts-form {
-  width: 279px;
-  margin: 0 auto;
   padding: 0;
-  padding-bottom: 13px;
-  margin-bottom: 18px;
+  padding-top: 24px;
 
   &__label {
     font-size: @title-size;
     font-weight: bold;
     display: block;
     text-align: center;
-    margin-bottom: 19px;
+    margin-bottom: 20px;
   }
 
   &__field {
