--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -1,15 +1,14 @@
 .feedback {
-  &__form {
-    border-bottom: 1px solid @grey-border;
-    padding-top: 25px;
-    padding-left: 20px;
-  }
-
   &__button {
+    width: 100%;
+    height: 58px;
     font-size: 21px;
+    text-transform: uppercase;
+    font-weight: bold;
     color: @white;
     background-color: @blue;
     border: none;
+    margin-top: 42px;
   }
 }
 
