--- a/source/less/blocks/introduce-form.less
+++ b/source/less/blocks/introduce-form.less
@@ -1,9 +1,6 @@
 .introduce-form {
-  width: 279px;
-  margin: 0 auto;
   padding: 0;
-  padding-bottom: 5px;
-  margin-bottom: 19px;
+  padding-top: 1px;
 
   &__label {
     font-size: @title-size;
